@@ -5,6 +5,10 @@ dpkg (1.15.12) UNRELEASED; urgency=high
     before the PGP signature. Closes: #617923
     Thanks to Roger Leigh for the initial patch.
 
+  [ Guillem Jover ]
+  * Fix OpenPGP armored signature parsing, to be resilient against doctored
+    input, including source package control files. Closes: #695919
+
  -- Guillem Jover <guillem@debian.org>  Fri, 01 May 2015 22:02:43 +0200
 
 dpkg (1.15.11) squeeze-security; urgency=high
